[package]
name = "llm_gateway"
version = "0.1.0"
authors = ["Katanemo Inc <info@katanemo.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
md5 = "0.7.0"
common = { path = "../common" }
http = "1.1.0"
governor = { version = "0.6.3", default-features = false, features = ["no_std"]}
acap = "0.3.0"
rand = "0.10.1"
thiserror = "1.0.64"
derivative = "2.2.0"
sha2 = "0.10.8"
hermesllm = { version = "0.1.0", path = "../hermesllm" }
bytes = "1.10"

[dev-dependencies]
serial_test = "3.1.1"
