[project]
name = "e2e_tests"
version = "0.0.1"
description = "e2e tests for prompt and llm gateway"
authors = [{name = "Katanemo Labs, Inc", email = "info@katanemo.com"}]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.3",
    "requests>=2.33.0",
    "selenium>=4.11.2",
    "pytest-sugar>=1.0.0",
    "deepdiff>=8.0.1",
    "pytest-retry>=1.6.3",
    "pytest-xdist>=3.5.0",
    "anthropic>=0.66.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
python_files = ["test*.py"]
addopts = ["-v", "-s"]
retries = 2
retry_delay = 0.5
cumulative_timing = false
